# llm-catalog

./: .gitattributes  .gitignore  .release-please-manifest.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  catalog.example.yaml  litellm.proxy.example.yaml  llm-catalog.example.json
